--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,28 @@ env/
 ENV/
 .venv/
 
+# Environment variables
+.env
+.env.*
+
 # Configuration files (may contain sensitive data)
 config/
+
+# Node.js / Frontend
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Frontend build output
+dist/
+build/
+
+# Package manager lockfiles (optional - uncomment if you want to ignore them)
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
 
 # Python
 __pycache__/
@@ -66,6 +86,13 @@ coverage.xml
 .Trashes
 ehthumbs.db
 Thumbs.db
+desktop.ini
+
+# Backup files
+*.bak
+*.backup
+*.orig
+*~
 
 # Logs
 *.log
@@ -81,9 +108,25 @@ logs/
 *.pth
 *.onnx
 yolo*.pt
+*.h5
+*.pkl
+*.model
 
 # Audio/Video files
 *.wav
 *.mp4
 *.avi
 *.mov
+*.mkv
+*.webm
+*.mp3
+
+# Camera/Detection output
+screenshots/
+recordings/
+detections/
+output/
+
+# Jupyter Notebooks (if used)
+*.ipynb_checkpoints/
+.ipynb_checkpoints/
